Fix Gradle 8.0 compatibility